--- a/src/blocks/review-item/style.scss
+++ b/src/blocks/review-item/style.scss
@@ -47,9 +47,9 @@
                 margin-bottom: 50px;
             }
         }
-        .bdt-review-icon span {
-            font-size: 14px;
-            color: #ff9a00;
-        }
+        // .bdt-review-icon span {
+        //     font-size: 14px;
+        //     color: #ff9a00;
+        // }
     }
 }
