--- a/src/blocks/review-item/editor.scss
+++ b/src/blocks/review-item/editor.scss
@@ -9,9 +9,9 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
     }
-    .bdt-review-icon .react-rater-star.is-active{
-        font-size: 14px;
-        color: #ff9a00;
-    }
+    // .bdt-review-icon .react-rater-star.is-active{
+    //     font-size: 14px;
+    //     color: #ff9a00;
+    // }
 }
     
