--- a/src/blocks/client-review/editor.scss
+++ b/src/blocks/client-review/editor.scss
@@ -5,3 +5,8 @@
 .wp-block-create-block-boilerplate {
 	border: 1px dotted rgb(1, 1, 1);
 }
+.bdt-tab-panel {
+	.components-divider {
+		margin: 0.7em 0;
+	}
+}
