--- a/src/blocks/review-item/editor.scss
+++ b/src/blocks/review-item/editor.scss
@@ -6,10 +6,11 @@
     display: block;
     .block-editor-block-list__layout {
         display: grid;
+        min-width: 0;
+        min-height: 0;
+        .wp-block-clr-review-item {
+            min-width: 0;
+        }
     }
-    // .bdt-review-icon .react-rater-star.is-active{
-    //     font-size: 14px;
-    //     color: #ff9a00;
-    // }
 }
     
