--- a/src/utilities/components/alignment/alignment.scss
+++ b/src/utilities/components/alignment/alignment.scss
@@ -9,6 +9,10 @@
     .bwd-single-icon {
         background: #0000;
         border: 1px solid #ddd;
+        cursor: pointer;
+        &.active {
+            background: #eae5e5;
+        }
     }
 }
 
